--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -60,7 +60,9 @@
     "# 1. Import the sqlalchemy extract function.\n",
     "from sqlalchemy import extract\n",
     "\n",
-    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n"
+    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n",
+    "results = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "    filter(extract('month', Measurement.date) == 6).all()"
    ]
   },
   {
